# phat

./: .gitignore  .ocamlformat  .ocamlinit  Dockerfile  LICENSE  Makefile  OMakeroot  README.md  _tags  myocamlbuild.ml  opam  package.json  phat-async.opam  phat-base.opam  phat-pure.opam  phat.opam
app/: dune  jbuild  phat.ml  phat_tests.ml  run_ounit_tests.ml
dune.lock/: base.v0.17.3.pkg  base_bigstring.v0.17.0.pkg  base_quickcheck.v0.17.1.pkg  core.v0.17.2.pkg  core_kernel.v0.17.0.pkg  gel.v0.17.0.pkg  int_repr.v0.17.0.pkg  lock.dune  ocaml-compiler-libs.v0.17.0.pkg  ocaml-compiler.5.4.1.pkg  ocaml_intrinsics_kernel.v0.17.2.pkg  ppx_bench.v0.17.1.pkg  ppx_bin_prot.v0.17.1.pkg  ppx_diff.v0.17.1.pkg  ppx_expect.v0.17.3.pkg  ppx_globalize.v0.17.2.pkg  ppx_inline_test.v0.17.1.pkg  ppx_let.v0.17.1.pkg  ppx_optcomp.v0.17.1.pkg  ppx_sexp_conv.v0.17.1.pkg  ppx_stable.v0.17.1.pkg  ppx_tydi.v0.17.1.pkg  ppx_typerep_conv.v0.17.1.pkg  ppx_variants_conv.v0.17.1.pkg  ppxlib.0.38.0.pkg  ppxlib_jane.v0.17.4.pkg  sexplib0.v0.17.0.pkg  typerep.v0.17.1.pkg  uopt.v0.17.0.pkg
esy.lock/: index.json
lib/: about.ml.m4  core2.mli  dune  import.ml  import.mli  path.ml  path.mli  phat.ml  phat.mli  phat_about.ml.m4  phat_async_unix.mlpack  phat_base.ml  phat_core2.mli  phat_pure.mlpack
lib/async/: about.ml  cli.ml  cli.mli  dune  filesys.ml  filesys.mli  jbuild  path.ml  phat_async.ml  phat_path.ml  std.ml  types.mli
lib/async-unix/: filesys.ml  filesys.mli  phat_path.ml  phat_path.mli  std.ml
lib/async_unix/: cli.ml  cli.mli  filesys.ml  filesys.mli
lib/base/: core2.ml  core2.mli  dune  jbuild  path.ml  path.mli  phat_path.ml  phat_path.mli  std.ml
lib/pure/: core2.ml  core2.mli  jbuild  path.ml  path.mli  phat_path.ml  phat_path.mli  std.ml  types.mli
lib/unix/: filesys.ml  filesys.mli  std.ml
opam/: descr  findlib  opam
