opam-version: "1.2"
maintainer: "ashish@solvuu.com"
authors: "Solvuu"
homepage: "https://github.com/solvuu/phat"
dev-repo: "https://github.com/solvuu/phat.git"
bug-reports: "https://github.com/solvuu/phat/issues"
license: "ISC"
tags: ["org:solvuu"]

build: [
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "async" {>= "v0.13.0"}
  "dune" {build}
  "ounit" # {test} TODO: Make ounit a dependency only if running tests.
  "phat-base"
  "ppx_jane"
]

available: [
  ocaml-version >= "4.06.0"
]
