opam-version: "1.2"
maintainer: "ashish@solvuu.com"
authors: "Solvuu"
homepage: "https://github.com/solvuu/phat"
dev-repo: "https://github.com/solvuu/phat.git"
bug-reports: "https://github.com/solvuu/phat/issues"
license: "ISC"
tags: ["org:solvuu"]

build: [
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "core_kernel" {>= "v0.11.0"}
  "dune" {build}
  "ppx_jane"
]

available: [
  ocaml-version >= "4.06.0"
]
