(library
  (name phat_base)
  (public_name phat-base)
  (libraries core_kernel)
  (preprocess (pps ppx_jane))
  (synopsis "Strongly typed file path and file system operations.")
)

(rule
  (targets GIT_COMMIT)
  (deps ../../bin/git_commit.sh)
  (action (with-stdout-to ${@} (run ../../bin/git_commit.sh)))
)

(rule
  (targets about.ml)
  (deps about.ml.m4 ../../VERSION GIT_COMMIT)
  (action (with-stdout-to ${@} (run m4 ${<})))
)
